# infrastructure

./: .flake8  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  .sops.yaml  .yamllint.yaml  LICENSE  MANIFEST.in  README.md  ansible-hosts.yaml  auth.py  build.py  debug-pod-node-fs.yml  debug-pod.yaml  deploy.py  dev-requirements.txt  flake.nix  hub.py  hubs.yaml  main.tf  nfs-playbook.yaml  noxfile.py  pyproject.toml  requirements.txt  rsync-active-users.py  setup.py  ssh-key.pub  test.tfvars  transform-gcp-cost-tables.py  variables.tf
.github/: CODEOWNERS  dependabot.yaml
.github/ISSUE_TEMPLATE/: ---debrief---post-mortem.md  01_new-issue.yaml  01_new-issue.yml  01_rollout-change.md  02_new-hub-provide-info.yml  02_new-hub_phase-0.md  02_new-hub_phase-0.yaml  02_new-hub_phase-1.yaml  03_new-hub_phase-1.yaml  03_new-hub_phase-2.yaml  04_new-hub_phase-2.yaml  2_new-hub.yml  (+37 more)
build-tools/: environment.yaml
clusters/: 2i2c.yaml
config/: billing-accounts.yaml  cloudbank.yaml  paleohack.yaml  secrets.yaml
deploy/: __main__.py  build.py  hub.py
deployer/: README.md  __main__.py  auth.py  auth0_app.py  auth_client_provider.py  billing.py  build.py  central_grafana.py  cilogon_app.py  cilogon_auth.py  cli.py  cli_app.py  cloud_access.py  cluster.py  cluster.schema.yaml  config_validation.py  debug.py  deploy_actions.py  deployer.py  file_acquisition.py  generate_aws_cluster.py  generate_cluster.py  generate_gcp_cluster.py  generate_hub.py  grafana_manager_utils.py  helm_upgrade_decision.py  hub.py  pyproject.toml  report.py  update_central_grafana_datasources.py  update_grafana_datasources.py  utils.py
docs/: Makefile  conf.py  configure.md  custom-image.md  environment.yml  index.md  myst.yml  operate.md  requirements.txt  structure.md
eksctl/: 2i2c-aws-us.jsonnet  README.md  Udder-Cranberry1-Various  aimatx-2i2c-hub.jsonnet  allen-swdb.jsonnet  berkeley-geojupyter.jsonnet  bican.jsonnet  bnext-bio.jsonnet  carbonplan.jsonnet  catalystproject-africa.jsonnet  cloudformation-extras.yaml  dandi.jsonnet  disasters.jsonnet  earthscope.jsonnet  eksctl-cluster-config.yaml  gridSST.jsonnet  gridsst.jsonnet  grss-veda.jsonnet  heliophysics.jsonnet  jupyter-health.jsonnet  jupyter-meets-the-earth.jsonnet  kitware.jsonnet  linc.jsonnet  maap.jsonnet  nasa-cryo.jsonnet  nasa-esdis.jsonnet  nasa-ghg.jsonnet  nasa-veda.jsonnet  neurohackademy.jsonnet  nmfs-openscapes.jsonnet  oceanhackweek-es.jsonnet  oceanhackweek.jsonnet  openscapes.jsonnet  openscapeshub.jsonnet  opensci.jsonnet  projectpythia.jsonnet  reflective.jsonnet  shared-hubs-cluster.jsonnet  smithsonian.jsonnet  strudel.jsonnet  (+7 more)
extra-scripts/: README.md  comment-deployment-plan-pr.py  comment-test-link-merged-pr.py  cost-monitoring-availability.py  create-gcp-disk  create-gcp-home-disk  rsync-active-users.py
extra_scripts/: README.md  approved_prs_reminder.py  count-auth0-apps.py  rsync-active-users.py  validate-binderhub-values.py
grafana-dashboards/: README.md  cloud-cost-aws.jsonnet  cloud-cost-users.jsonnet  common.jsonnet  common.libsonnet  cost-attribution.jsonnet  group.jsonnet  user.jsonnet
helm-charts/: chartpress.yaml
hub/: Chart.yaml  requirements.yaml  values.yaml
hub-templates/: chartpress.yaml
image/: Dockerfile  install.R  jupyter_notebook_config.py  rsession.conf
kops/: carbonplan.jsonnet  farallon.jsonnet  openscapes.jsonnet  setup-efs.py
reports/: enc-deploy-key.secret.key  kubernetes-versions.ipynb  requirements.txt  run.py
secrets/: 2i2c.json  azure.carbonplan.yaml  carbonplan-azure.yaml  carbonplan.json  carbonplan.yaml  cloudbank.json  farallon.json  farallon.yaml  gke-key.json  hackathon-alpha.json  openscapes.json  openscapes.yaml  pangeo-181919.json  pangeo-hubs.json  pangeo-hubs.yaml
support/: Chart.yaml  README.md  provision.py  requirements.yaml  secrets.yaml  values.yaml
terraform/: .terraform-docs.yml  cd.tf  cloudbank.tfvars  cluster.tf  hackathon-2i2c-project-alpha.tfvars  main.tf  meom.tfvars  network.tf  test.tfvars  variables.tf
tests/: README.md  conftest.py  context.py  staging-hubs.yaml  test_billing.py  test_custom_templates.py  test_helm_upgrade_decision.py  test_hub_health.py
(+2143 files in other folders)
