[build-system]
requires = ["hatchling==1.28.*", "hatch-requirements-txt==0.4.1"]
build-backend = "hatchling.build"

[project]
name = "2i2c-deployer"
description = "Deploy JupyterHubs for the 2i2c Infrastructure"
version = "0.0.1"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.13"
dynamic = ["dependencies", "optional-dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
dev = ["dev-requirements.txt"]

[project.scripts]
deployer = "deployer.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["deployer"]


[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "./tests",
]

[tool.codespell]
skip = '.git,*.pdf,*.svg,*.secret.*,*.key'
ignore-words-list = 'aks'

[tool.black]
force-exclude = '''
deployer/dev_commands/generate/cryptnono_config/enc-blocklist-generator.secret.py
'''
